# UppASD

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  requirements.txt.remove  setup.py  setup_UppASD.sh
ASD_GUI/: ASD_GUI.py  MANIFEST.in  README.md  downgrade_me.sh  pyproject.toml  requirements.txt  setup.py  upgrade_me.sh
ASD_GUI/ASD_GUI/: ASD_GUI.py  README.md
ASD_GUI/Input_Creator/: ASDInputGen.py
ASD_GUI/PLOT/: ASDPlots2D.py
ASD_GUI/UI/: ASDInputWindows.py  ASDMenuToolbar.py  Posfile_Creator.ui
ASD_GUI/VTK_Viz/: ASDVTKReading.py  ASDVTKVizOptions.py
python/: MANIFEST.in  pyproject.toml  setup.py
python/uppasd/: __init__.py  inputdatatype.py  pyasd.py  simulationdata.py
source/: 0sd.f90  CMakeLists.txt  Makefile.gfortran  Makefile.legacy  Makefile.legacy.gfortran  chelper.f90  gneb_driver.f90  kind.map  mc_driver.f90  ms_driver.f90  pt_driver.f90  pyasd.f90  sd_driver.f90  sd_driver_cpu.f90  sd_driver_gpu.f90  sld_driver.f90  sx_driver.f90  uppasd.f90  wl_driver.f90  zmakesd.txt
source/Clusters/: CMakeLists.txt  FixedMom.f90  clus_geometry.f90  clusters.f90
source/CoarseGraining/: CMakeLists.txt  adaptivetimestepping.f90  macrocells.f90  optimizationroutines.f90
source/Correlation/: CMakeLists.txt  autocorrelation.f90  bimagnoncorr.f90  bls.f90  correlation.f90  correlation_core.f90  correlation_kernels.f90  correlation_print.f90  correlation_type.f90  correlation_utils.f90  omegas.f90  qvectors.f90
source/Evolution/: CMakeLists.txt  depondt.f90  evolution.f90  evolution_cpu.f90  evolution_gpu.f90  evolution_lite.f90  heun_proper.f90  heun_single.f90  llgi.f90  midpoint.f90  midpoint_gpu.f90  sphmidpoint.f90  updatemoments.f90
source/Fields/: CMakeLists.txt  calculatefields.f90  demagfield.f90  fieldpulse.f90  microwavefield.f90  prn_fields.f90  prn_microwaves.f90  spintorques.f90
source/GNEB/: CMakeLists.txt  energyminima.f90  gneb.f90  hermitelib.f90  hessian.f90  oso.f90  oso_full.f90  pathinit.f90  vpo.f90
source/Hamiltonian/: CMakeLists.txt  applyhamiltonian.f90  dipolecommon.f90  dipolemanager.f90  energy.f90  ewaldmom.f90  fftdipole_fftw.f90  fftdipole_mkl.f90  full_hamiltonian_dispatcher.f90  hamiltonian_dispatcher.f90  hamiltonianactions.f90  hamiltonianactions_cpu.f90  hamiltonianactions_gpu.f90  hamiltonianactions_lite.f90  hamiltoniandata.f90  hamiltoniandatatype.f90  hamiltonianinit.f90  hamiltonianparts.f90  neighbourmap.f90  neighbourmap_sfc.f90  printhamiltonian.f90  scalehamiltonian.f90  sfc_hamiltonian_interface.f90  sfc_integration.f90  sfc_integration_full.f90  sfc_neighbour_finder.f90  sfc_neighbour_hamiltonian.f90  sfc_neighbour_hamiltonian_full.f90  sfc_optimized_neighbors.f90
source/Input/: CMakeLists.txt  fileparser.f90  inputdata.f90  inputdatatype.f90  inputhandler.f90  inputhandler_ext.f90  printinput.f90
source/KMC/: CMakeLists.txt  kmc.f90  kmcdata.f90
source/LSF/: CMakeLists.txt  inducedmoments.f90  lsf.f90  prn_induced_info.f90  qhb.f90
source/Lattice/: CMakeLists.txt  latticecorrelation.f90  latticedata.f90  latticefielddata.f90  latticehamiltonianactions.f90  latticehamiltoniandata.f90  latticehamiltonianinit.f90  latticeinit.f90  latticeinputdata.f90  latticeinputhandler.f90  latticemeasurements.f90  latticeprinthamiltonian.f90  latticerestart.f90  latticespectra.f90  prn_latticeaverages.f90  prn_latticefields.f90  prn_latticetrajectories.f90  velocityrescale.f90  verlet.f90
source/Measurement/: CMakeLists.txt  measurements.f90  polarization.f90  prn_averages.f90  prn_cudameasurements.f90  prn_currents.f90  prn_topology.f90  prn_trajectories.f90  topology.f90
source/MonteCarlo/: CMakeLists.txt  mc_wolff.f90  montecarlo.f90  montecarlo_common.f90  prn_spinice.f90  qminimizer.f90  qminimizer_alt.f90  setupspinice.f90  spinice.f90  spinicedata.f90  wanglandau.f90
source/Multiscale/: CMakeLists.txt  anisotropy.f90  areacoefficients.f90  atomgenerator.f90  atomlinker.f90  configuration.f90  dampingband.f90  ddot__genmod.f90  depondt_ms.f90  dm.f90  dnrm2__genmod.f90  dscal__genmod.f90  dynamicarray.f90  dynamicmultiscale.f90  evolution_ms.f90  fileinput.f90  finitedifference.f90  formats.f90  geometrymodule.f90  gradientindices.f90  interactioninput.f90  interpolation.f90  kdtreemodule.f90  lsqrDataModule.f90  lsqrModule.f90  lsqrblas.f90  lsqrblasInterface.f90  midpoint_ms.f90  momentinterpolant.f90  momentregions.f90  multiscale.f90  multiscaledampingband.f90  multiscalefileparser.f90  multiscalegradients.f90  multiscaleinterpolation.f90  multiscalesetupsystem.f90  shapemodule.f90  sortmodule.f90  sparsematrix.f90  spindynamicsio.f90
source/Parameters/: CMakeLists.txt  constants.f90  parameters.f90
source/README/: READMEdistbin  READMEdistfull  READMEdistsmall  buildonSNICsystemsREADME  makeREADME
source/RNG/: CMakeLists.txt  chroma.f90  mtprng.f90  randomdrivers.f90  randomnumbers.f90  stdtypes.f90  ziggurat.f90
source/SpinWaves/: CMakeLists.txt  ams.f90  chern_number.f90  diamag.f90  diamag_full.f90  diamag_variants.f90  matfunc.f90  prn_micromagnetic.f90  stiffness.f90
source/System/: CMakeLists.txt  chemicaldata.f90  damping.f90  elkgeometry.f90  fielddata.f90  geometry.f90  gradients.f90  higher_gradients.f90  magnetizationinit.f90  metatypes.f90  momentdata.f90  restart.f90  simulationdata.f90  sparse.f90  systemdata.f90  temperature.f90  temperature_3tm.f90  temperature_common.f90
source/Tools/: CMakeLists.txt  errorhandling.f90  json.f90  math_functions.f90  nocuda.f90  profiling.f90  sorting.f90  timers_hp.c.old  tools.f90
source/f90wrap/: f90wrap_inputdata.f90  f90wrap_inputdatatype.f90  f90wrap_inputhandler.f90  f90wrap_inputhandler_ext.f90  f90wrap_momentdata.f90  f90wrap_pyasd.f90  f90wrap_simulationdata.f90  f90wrap_uppasd.f90
source/gpu_files/: CMakeLists.txt  base.cuh  base.hpp  c_headers.hpp  c_helper.h  changes.txt  cudaCommon.hpp  cudaDepondtIntegrator.cu  cudaDepondtIntegrator.hpp  cudaEventPool.cu  cudaEventPool.hpp  cudaGPUErrchk.hpp  (+84 more)
(+727 files in other folders)
